<resources>
    <string name="app_name">Rivers of Pune</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jeevitnadi Living River Foundation</string>
    <string name="nav_header_subtitle">Helping Pune\'s rivers live again</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rivermaps">River Maps</string>
    <string name="menu_riverevents">River Events</string>
    <string name="menu_riverhistory">History of the River</string>
    <string name="menu_adoptstretch">Adopt a River Stretch</string>
    <string name="menu_share">Share this app</string>
    <string name="menu_send">Contact Us</string>
    <string name="title_activity_article">ArticleActivity</string>

    <string name="open_drawer_content_desc">Open navigation drawer</string>
    <string name="close_drawer_content_desc">Close Navigation Drawer</string>
</resources>
