<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rivermaps"
            android:icon="@drawable/ic_river_maps"
            android:title="@string/menu_rivermaps" />

        <item
            android:id="@+id/nav_riverevents"
            android:icon="@drawable/river_events2"
            android:title="@string/menu_riverevents" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_of_river"
            android:title="@string/menu_riverhistory" />
        <item
            android:id="@+id/nav_adoptstretch"
            android:icon="@drawable/adopt_a_river_stretch"
            android:title="@string/menu_adoptstretch" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
