<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.riversofpune.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rivermaps"
        android:name="com.example.riversofpune.ui.rivermaps.RiverMapsFragment"
        android:label="@string/menu_rivermaps"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_riverevents"
        android:name="com.example.riversofpune.ui.riverevents.RiverEventsFragment"
        android:label="@string/menu_riverevents"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.riversofpune.ui.riverhistory.RiverHistoryFragment"
        android:label="@string/menu_riverhistory"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_adoptstretch"
        android:name="com.example.riversofpune.ui.riverhistory.RiverHistoryFragment"
        android:label="@string/menu_adoptstretch"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.riversofpune.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.riversofpune.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>